# kivhift.org

./: .gitignore  Makefile  pelicanconf.py  publishconf.py  pyproject.toml
content/: about.rst  projects.rst
content/pages/: 404.rst  50x.rst  about.rst
content/posts/: boids.rst  conway-gol.html  random-particles.rst  underscore-your-bugs.rst
content/static/: boids.html  boids.js  conway-gol.js  particles.html  particles.js
kivhift-theme/static/css/: consolable.css  kivhift.css
kivhift-theme/templates/: article.html  base.html  index.html  page.html
